express-reliability-platform-capstone/governance/gatekeeper/constraints/no-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoLatestTag
metadata:
  name: platform-no-latest-tag
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - platform
