express-reliability-platform-capstone/governance/gatekeeper/constraints/require-ns-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNamespaceLabels
metadata:
  name: require-security-namespace-labels
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
